render/kubernetes-dashboard/templates/networking/ingress.yaml
---
# Source: kubernetes-dashboard/templates/networking/ingress.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
  name: kubernetes-dashboard
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - dashboard.master.com
      secretName: kubernetes-dashboard-certs
  rules:
    - host: dashboard.master.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-kubernetes-dashboard-web
                port:
                  name: web
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: release-name-kubernetes-dashboard-api
                port:
                  name: api
